--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
