--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-image-file-resizer": "^0.4.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "use-places-autocomplete": "^1.11.0",
